--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
   - 2.4
   - 2.5
   - 2.6
-before_install: gem install bundler -v 1.17.2
+before_install: 'printf "y" | rvm @global do gem uninstall bundler; gem install bundler -v "~> 1.17.2"'
 notifications:
   email:
 on_success: never
